Move buymeacoffee link and fix blockquote spacing (#60)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -258,6 +258,7 @@ blockquote {
   border-left: 2px solid var(--light-secondary-color);
   color: grey;
   padding-left: 1rem;
+  margin-left: 0;
 }
 
 table {
